experimental/parser/testdata/parser/import/symbol.proto.stderr.txt
error: unexpected qualified name in import
  --> testdata/parser/import/symbol.proto:19:8
   |
19 | import my.Proto;
   |        ^^^^^^^^ expected string literal
   |
   = help: Protobuf does not support importing symbols by name, instead, try
           importing a file, e.g. `import "google/protobuf/descriptor.proto";`

error: unexpected qualified name in import
  --> testdata/parser/import/symbol.proto:20:13
   |
20 | import weak my.Proto;
   |             ^^^^^^^^ expected string literal
   |
   = help: Protobuf does not support importing symbols by name, instead, try
           importing a file, e.g. `import "google/protobuf/descriptor.proto";`

error: unexpected qualified name in import
  --> testdata/parser/import/symbol.proto:21:15
   |
21 | import public my.Proto;
   |               ^^^^^^^^ expected string literal
   |
   = help: Protobuf does not support importing symbols by name, instead, try
           importing a file, e.g. `import "google/protobuf/descriptor.proto";`

encountered 3 errors
